tests/ui/09-raw-azumi-path.rs
use azumi::html;

fn main() {
    let _component = html! {
        <div>
            @{azumi::Raw("test")}
        </div>
    };
}